# mcp-agents-demo

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  litellm_config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: __init__.py
src/agents/: autogen_agent.py  coverage_agent.py  crewai_agent.py  langchain_agent.py  router_agent.py  runner.py
src/core/: cache.py  concurrency.py  config.py  decorators.py  logging.py  models.py  tracing.py
src/gateway/: llm_client.py  portkey_client.py
src/server/: main.py
src/tools/: shift_tools.py
tests/: conftest.py
tests/integration/: test_agent.py
tests/unit/: test_autogen_agent.py  test_cache.py  test_concurrency.py  test_crewai_agent.py  test_decorators.py  test_langchain_agent.py  test_models.py  test_router_agent.py  test_tracing.py
