[project]
name = "mcp-agents-demo"
version = "0.1.0"
description = "Production scaffold: FastMCP + Pydantic AI + asyncio + LiteLLM + structlog"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Erodis Pérez Michel", email = "eperezm1986@gmail.com" }]
keywords = ["mcp", "agents", "ai", "pydantic", "asyncio", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic-ai>=0.0.13",
    "anthropic>=0.30",
    "litellm>=1.40",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "tenacity>=8.3",
    "rich>=13.7",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
mcp-server  = "src.server.main:run_server"
demo-agents = "src.agents.runner:run_demo"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version      = "3.12"
strict              = true
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
addopts        = "--cov=src --cov-report=term-missing --cov-report=xml -q"

[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "scripts/*"]
